# pretty-duration

./: Cargo.toml  benchmark.sh  coverage.sh  coverage_ci.sh  readme.md
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: lib.rs
src/pretty_duration_lib/: mod.rs  pretty_duration_bins.rs  pretty_duration_options.rs
tests/: pretty_duration.rs
