[package]
name = "pretty-duration"
description = "Rust library that takes a duration and returns a string that is prettier to read for a human. The format of the duration can be customized in a short and long format and can be localized."
version = "0.1.0"
edition = "2021"
authors = ["Patrick Desjardins <mrdesjardins@gmail.com>"]
homepage = "https://github.com/MrDesjardins/pretty-duration"
repository = "https://github.com/MrDesjardins/pretty-duration"
license = "Apache-2.0"
keywords = ["pretty-duration", "humanify-duration", "easy-ready-duration", "format-duration", "format-number"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
